[package]
name = "bioseq"
version = "0.0.1"
description = "bioseq description in cargo.toml"
authors = ["Karolis Ramanauskas"]
license = "GNU General Public License v3.0"
repository = "https://github.com/karolisr/bioseq"
edition = "2021"
rust-version = "1.81"

[lib]
name = "bioseq"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true # Compile your binary in smaller steps.
codegen-units = 8  # Allows LLVM to perform better optimization. 1-256; 1=slow compile time; 256=faster compile time.
lto = false        # Enables link-time-optimizations. Use false for faster compile time.
opt-level = 3      # "s" prioritizes small binary size. Use 3 for faster compile time.
panic = "abort"    # Higher performance by disabling panic handlers.
strip = false      # Ensures debug symbols are removed.

[profile.release]
incremental = true # Compile your binary in smaller steps.
codegen-units = 1  # Allows LLVM to perform better optimization. 1-256; 1=slow compile time; 256=faster compile time.
lto = true         # Enables link-time-optimizations. Use false for faster compile time.
opt-level = "s"    # "s" prioritizes small binary size. Use 3 for faster compile time.
panic = "abort"    # Higher performance by disabling panic handlers.
strip = true       # Ensures debug symbols are removed.

[dependencies]
